Revert "Added shipping to free items"
This reverts commit 57e59bcda86353789eb3ecc1c37b4542f2f376a5.

--- a/WishSorter/WishSorter/WishSorter.vbproj
+++ b/WishSorter/WishSorter/WishSorter.vbproj
@@ -79,6 +79,12 @@
       <DependentUpon>Form1.vb</DependentUpon>
       <SubType>Form</SubType>
     </Compile>
+    <Compile Include="Forms\Form2.Designer.vb">
+      <DependentUpon>Form2.vb</DependentUpon>
+    </Compile>
+    <Compile Include="Forms\Form2.vb">
+      <SubType>Form</SubType>
+    </Compile>
     <Compile Include="Forms\loginForm.Designer.vb">
       <DependentUpon>loginForm.vb</DependentUpon>
     </Compile>
@@ -104,6 +110,9 @@
   <ItemGroup>
     <EmbeddedResource Include="Forms\Form1.resx">
       <DependentUpon>Form1.vb</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Forms\Form2.resx">
+      <DependentUpon>Form2.vb</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Forms\loginForm.resx">
       <DependentUpon>loginForm.vb</DependentUpon>
