Changes made with v0.3
Please check the changelog in v0.3 release.
https://github.com/Ranarrr/WishSorter/releases

--- a/WishSorter/WishSorter/WishSorter.vbproj
+++ b/WishSorter/WishSorter/WishSorter.vbproj
@@ -72,6 +72,8 @@
     <Import Include="System.Threading.Tasks" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="classes\Functions.vb" />
+    <Compile Include="classes\WishItem.vb" />
     <Compile Include="Forms\Form1.vb">
       <SubType>Form</SubType>
     </Compile>
